--- a/frontend/src/pages/movies.html
+++ b/frontend/src/pages/movies.html
@@ -11,19 +11,19 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
   <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
-<script src="//code.angularjs.org/1.6.0/angular.min.js"></script>
-<script src="//code.angularjs.org/1.6.0/angular-route.min.js"></script>
-<script src="//code.angularjs.org/1.6.0/angular-cookies.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <style>
-  @import url("../../css/main.css");
+   @import url("../../css/main.css");
   @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
-  @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Pacifico&display=swap');
+  @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Rancho|Pacifico&display=swap');
   @import url("../../css/navbar.css");
   @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-  @import url('css/howitworks.css');
+  .movie-title{
+    font-size: 30px;
+    font-family: 'Rancho',cursive;
+    color: rgb(70, 16, 30);
+}
   </style>
   
 </head>
@@ -65,11 +65,45 @@
                       </nav>
                     
                       </div>
-                      <div class="continut">
-                            <div class="form-group col-md-4">
-                                    <label for="datepicker">Dată</label>
+                      <div class="continut ">
+                          <div class="wrapper-movies flex-column mx-auto" style="width:70%">
+                          <div class="row">
+                            <div class="form-group col-md-10">
+                                    <label for="datepicker">Select the date </label>
                                     <input id="datepicker" width="276" />
                                 </div>
+                                </div>
+                                <div class="row">
+                                <table class="table table-hover">
+                                        <thead>
+                                          <tr>
+                                            <th>Movie</th>
+                                            <th>Time</th>
+                                            <th>Room</th>
+                                            <th>Details</th>
+                                          </tr>
+                                        </thead>
+                                        <tbody>
+                                          <tr>
+                                            <td><p class="movie-title"><img src="/frontend/images/john-wick-chapter-2-poster.jpg" style="float:left; width:60px;height:60px; margin-right:20px;">  John Wick Chapter 3</p></td>
+                                            <td>12:00-1300</td>
+                                            <td>Room 1 </td>
+                                            <td><button class="btn-primary">Details</button></td>
+                                          </tr>
+                                          <tr>
+                                            <td>Mary</td>
+                                            <td>Moe</td>
+                                            <td>mary@example.com</td>
+                                          </tr>
+                                          <tr>
+                                            <td>July</td>
+                                            <td>Dooley</td>
+                                            <td>july@example.com</td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                      </div>
+                                      </div>
                       </div>
                       <div class="continut footer">
                             <!-- Footer -->
