--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <div id="page-container" ng-controller="loginCtrl">
+    <div id="page-container" ng-controller="homeCtrl">
 
         <div ng-include="'./views/partials/shared/navbar.html'"></div>
 
@@ -56,8 +56,11 @@
     <script src="//code.angularjs.org/1.6.0/angular-cookies.min.js"></script>
 
     <script src="./src/app.js"></script>
+
+    <script src="./src/controllers/home.controller.js"></script>
     <script src="./src/controllers/login.controller.js"></script>
     <script src="./src/controllers/register.controller.js"></script>
+
     <script src="./src/services/auth.service.js"></script>
 </body>
 
