--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cinemagic | Home</title>
+  <link rel="shortcut icon" type="image/png" href="images/logos/favicon.png"/>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -18,15 +19,30 @@
   </style>
   
 </head>
-<body>
+<body >
   
    <div id="page-container"ng-controller="loginCtrl">
 
       <div ng-include="'./src/pages/partials/shared/navbar.html'"></div>
-      <div ng-include src="'./src/pages/partials/carousel.html'"></div>
+      <div class="continut banner d-flex justify-content-center">
+          <div id="carouselExampleSlidesOnly" class="carousel slide  my-5 mx-auto" data-ride="carousel">
+            <div class="carousel-inner" >
+              <div class="carousel-item active">
+                <img class="d-block " src="images/maxresdefault (1).jpg" alt="First slide" id="carousel-img">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block  " src="images/3.jpg" alt="Second slide" id="carousel-img">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block " src="images/maxresdefault (2).jpg" alt="Third slide" id="carousel-img">
+              </div>
+            </div>
+          </div>
+          </div>
       <div ng-include="'./src/pages/partials/cards.html'"></div>
       
       <div ng-include="'./src/pages/partials/modals/login/loginModal.view.html'"></div>
+      <div ng-include="'./src/pages/partials/modals/register/register.view.html'"></div>
        <div ng-include="'./src/pages/partials/shared/footer.html'"></div>
     </div>
 <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
@@ -40,6 +56,6 @@
 <script src="./js/controllers/register.controller.js"></script>
 
 <script src="./js/services/auth.service.js"></script>
-
+<script src="./js/constants.js"></script>
 </body>
 </html>
