--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     <div id="page-container" ng-controller="homeCtrl">
 
         <div ng-include="'./views/partials/shared/navbar.html'"></div>
-
+        <div class="color">
         <div class="continut banner d-flex justify-content-center">
             <div id="carouselExampleSlidesOnly" class="carousel slide  my-5 mx-auto" data-ride="carousel">
                 <div class="carousel-inner">
@@ -41,6 +41,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
 
         <div ng-include="'./views/partials/cards.html'"></div>
