--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,18 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cinemagic | Home</title>
 
-    <link rel="shortcut icon" type="image/png" src="./images/logos/favicon.png">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <style>
-        @import url("css/main.css");
+        @import url("dist/css/main.css");
         @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
         @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Pacifico&display=swap');
-        @import url("css/navbar.css");
         @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-        @import url('css/howitworks.css');
     </style>
 </head>
 
@@ -31,13 +28,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide  my-5 mx-auto" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block " src="images/maxresdefault (1).jpg" alt="First slide" id="carousel-img">
+                        <img class="d-block " src="dist/images/maxresdefault (1).jpg" alt="First slide" id="carousel-img">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block  " src="images/3.jpg" alt="Second slide" id="carousel-img">
+                        <img class="d-block  " src="dist/images/3.jpg" alt="Second slide" id="carousel-img">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block " src="images/maxresdefault (2).jpg" alt="Third slide" id="carousel-img">
+                        <img class="d-block " src="dist/images/maxresdefault (2).jpg" alt="Third slide" id="carousel-img">
                     </div>
                 </div>
             </div>
@@ -49,19 +46,12 @@
         <div ng-include="'./views/partials/modals/register/register.view.html'"></div>
     </div>
 
-
     <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="//code.angularjs.org/1.6.0/angular.min.js"></script>
     <script src="//code.angularjs.org/1.6.0/angular-route.min.js"></script>
     <script src="//code.angularjs.org/1.6.0/angular-cookies.min.js"></script>
 
-    <script src="./src/app.js"></script>
-
-    <script src="./src/controllers/home.controller.js"></script>
-    <script src="./src/controllers/login.controller.js"></script>
-    <script src="./src/controllers/register.controller.js"></script>
-
-    <script src="./src/services/auth.service.js"></script>
+    <script src="./dist/scripts/bundle.js"></script>
 </body>
 
 </html>
