--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <style>
-        @import url("dist/css/main.css");
+        @import url("css/main.css");
         @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
         @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Pacifico&display=swap');
         @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
@@ -20,25 +20,10 @@
 </head>
 
 <body>
-    <div id="page-container" ng-controller="homeCtrl">
-
+    <div id="page-container">
         <div ng-include="'./views/partials/shared/navbar.html'"></div>
 
-        <div class="continut banner d-flex justify-content-center">
-            <div id="carouselExampleSlidesOnly" class="carousel slide  my-5 mx-auto" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block " src="dist/images/maxresdefault (1).jpg" alt="First slide" id="carousel-img">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block  " src="dist/images/3.jpg" alt="Second slide" id="carousel-img">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block " src="dist/images/maxresdefault (2).jpg" alt="Third slide" id="carousel-img">
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div ng-view></div>
 
         <div ng-include="'./views/partials/cards.html'"></div>
         <div ng-include="'./views/partials/modals/login/loginModal.view.html'"></div>
@@ -51,7 +36,7 @@
     <script src="//code.angularjs.org/1.6.0/angular-route.min.js"></script>
     <script src="//code.angularjs.org/1.6.0/angular-cookies.min.js"></script>
 
-    <script src="./dist/scripts/bundle.js"></script>
+    <script src="scripts/bundle.js"></script>
 </body>
 
 </html>
