--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <style>
         @import url("css/main.css");
         @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
-        @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Pacifico&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Patrick+Hand|Pacifico&display=swap');
       
         @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
       
