movie details style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
     <style>
         @import url("css/main.css");
         @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
-        @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Patrick+Hand|Pacifico&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Archivo+Narrow|Patrick+Hand|Pacifico&display=swap');
         @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
     </style>
   
@@ -47,11 +47,11 @@
         <div ng-include="'./views/partials/modals/login/loginModal.view.html'"></div>
         <div ng-include="'./views/partials/shared/footer.html'"></div>
         <div ng-include="'./views/partials/modals/register/register.view.html'"></div>
-        <div ng-include="'./views/partials/modals/moviedetails.view.html'"></div>
+      
     </div>
 
    
-    <script src="//code.angularjs.org/1.6.0/angular.min.js"></script>
+ 
     <script src="//code.angularjs.org/1.6.0/angular-route.min.js"></script>
     <script src="//code.angularjs.org/1.6.0/angular-cookies.min.js"></script>
 
