--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src= 
     "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> 
         </script>     
@@ -35,8 +35,8 @@
   
 </head>
 
-<body >
-    <div id="page-container">
+<body ng-controller="homeCtrl">
+    <div id="page-container" ng-class="{'body-bg': isCurrentRoute('/movies')}">
         <div ng-include="'./views/partials/shared/navbar.html'"></div>
 
         <div ng-view></div>
