--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
         <!-- <div ng-include="'./views/partials/cards.html'"></div> -->
 
 
-        <div ng-include="'./views/partials/modals/login/loginModal.view.html'"></div>
+        <!-- <div ng-include="'./views/partials/modals/login/loginModal.view.html'"></div> -->
         <div ng-include="'./views/partials/shared/footer.html'"></div>
         <div ng-include="'./views/partials/modals/register/register.view.html'"></div>
       
